samples/ut/access/FailPrivate01.err
FailPrivate01.z2(7, 20): error: can't access non public constructor:
	Foo()