samples/ut/access/FailPrivate01.z2
using org.z2legacy.samples.ut.access.Foo;

namespace org.z2legacy.samples.ut.access;

class FailPrivate01 {
	def @main() {
		val p = Foo{};
	}
}